--- a/config/metrics/metrics_duacs_2023.yaml
+++ b/config/metrics/metrics_duacs_2023.yaml
@@ -1,24 +1,24 @@
 # @package _global_
 
 # Folder names for data and metrics organisation
-xp_name: glorys4_4dvar
-data_name: processed_2019_global_4
+xp_name: duacs
+data_name: REPO_processed_2023_global_4
 
 # Your model type, for data preprocessing
-MODEL_TYPE: 4DVARNET
+MODEL_TYPE: DUACS
 
 paths:
   # Folders in which subfolders for your metrics will be created
-  OSE_DATA_PATH: /DATASET/OCB_traces/
-  METRICS_PATH: /DATASET/GLORYS12/metrics/
+  OSE_DATA_PATH: /Odyssey/public/altimetry_traces/
+  METRICS_PATH: /Odyssey/private/p24hasle/metrics/
 
   # Folder where your leadtimes to evaluate are located
-  rec_path: /DATASET/GLORYS12/rec/glorys4_global_movpatch_softedge_1y_fastrec/nrt_2019_global_4/
+  rec_path: ['/Odyssey/public/glorys/reanalysis/duacs_sla_2000_2019_4th.nc', '/Odyssey/public/glorys/reanalysis/duacs_2023_4th.nc']
 
 specs:
   # Time slice for data download and metrics computations
-  min_time: 2019-02-01
-  max_time: 2019-08-31
+  min_time: 2023-01-01
+  max_time: 2023-06-30
   time_day_crop: 0
 
   # Domain for data download
